tests/type-errors/expr_control_match_or_bad_type.arl
archetype expr_control_match_or_bad_type

variable a : nat = 0

entry exec() {
  var l : nat = 2;
  a :=
  match l with
  | left(v)  -> v
  | right(v) -> 0
  end
}
